--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "moment": "^2.29.4",
     "mongoose": "^7.0.3",
+    "mongoose-moment": "^0.1.3",
     "nodemon": "^2.0.22"
   }
 }
