--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "notewood",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -23,6 +24,7 @@
     "moment": "^2.29.4",
     "mongoose": "^7.0.3",
     "mongoose-moment": "^0.1.3",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "sass": "^1.60.0"
   }
 }
