--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^7.0.3",
     "mongoose-moment": "^0.1.3",
     "nodemon": "^2.0.22",
+    "sanitize.css": "^13.0.0",
     "sass": "^1.60.0"
   }
 }
