--- a/package.json
+++ b/package.json
@@ -18,15 +18,21 @@
   },
   "homepage": "https://github.com/yannhn/notewood#readme",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "method-override": "^3.0.0",
     "moment": "^2.29.4",
     "mongoose": "^7.0.3",
     "mongoose-moment": "^0.1.3",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.22",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "sanitize.css": "^13.0.0",
-    "sass": "^1.60.0"
+    "sass": "^1.60.0",
+    "validator": "^13.9.0"
   }
 }
