--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "notewood",
   "version": "1.0.0",
+  "engines": {
+    "node": ">=16.17.1"
+  },
+  "private": true,
   "description": "",
   "main": "server.js",
   "scripts": {
