--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "compile": "sass --watch --no-source-map public/styles/styles.scss public/styles/styles.css"
   },
   "repository": {
